# wasm-poc

./: .eslintrc.mjs  .gitignore  index.html  package.json  pnpm-lock.yaml  rspack.config.mjs
src/: index.js  main.css
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
