[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
authors = ["Val Jed"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"

# See more keys
[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = "0.9.0"
regex = "1.8.1"
serde = "1.0.160"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
  version = "0.3.64"
  features = [
    "Window", 
    "Document",
    "HtmlElement", 
    "EventListener", 
    "InputEvent", 
    "console"
  ]

